--- a/client/src/components/core/Booking/Booking.module.css
+++ b/client/src/components/core/Booking/Booking.module.css
@@ -586,6 +586,7 @@
     text-transform: capitalize;
     line-height: 1.15;
     padding-top: 0.3rem;
+    margin: 0 auto;
 }
 
 .error {
