--- a/client/src/pages/SalesReport/SalesReport.module.css
+++ b/client/src/pages/SalesReport/SalesReport.module.css
@@ -131,6 +131,7 @@
     text-transform: capitalize;
     line-height: 1.15;
     padding-top: 0.3rem;
+    margin: auto;
 }
 
 .buttonGroup {
